--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,6 +25,11 @@ spring:
     active:
       - "prod"
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
 #build:
 #  version: "3.0"
 #
