--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,12 +24,18 @@ spring:
   profiles:
     active:
       - "prod"
+  rabbitmq:
+    host: "localhost"
+    port: 5672
+    username: "guest"
+    password: "guest"
 
 management:
   endpoints:
     web:
       exposure:
         include: "*"
+
 #build:
 #  version: "3.0"
 #
